# lucius

./: .env.example  .gitignore  BRANCHING_STRATEGY.md  BRANCH_STATUS.md  COMPLETION_CONFIRMATION.md  CREDENTIAL_COMPLETION_REPORT.md  CREDENTIAL_DOCUMENTATION_INDEX.md  CREDENTIAL_IMPLEMENTATION_SUMMARY.md  CREDENTIAL_MANAGEMENT.md  CREDENTIAL_ONBOARDING.md  CREDENTIAL_QUICK_REFERENCE.md  CREDENTIAL_SECURITY_CHECKLIST.md  CREDENTIAL_SETUP.md  DELIVERABLES_SUMMARY.md  FINAL_SUMMARY.md  POLYGLOT_IMPLEMENTATION.md  POLYGLOT_PARSERS.md  POLYGLOT_QUICKSTART.md  README.md  README_CREDENTIALS.md  STEP_1_COMPLETION_SUMMARY.md  STEP_2_COMPLETION_SUMMARY.md  STEP_3_COMPLETION_SUMMARY.md  STEP_4_COMPLETION_SUMMARY.md  STEP_5_COMPLETION_SUMMARY.md  VERIFY_NNIP_RCE_DELIVERY.md  VERIFY_NNIP_RCE_MANIFEST.md  VERIFY_NNIP_RCE_OVERVIEW.sh  VERIFY_NNIP_RCE_QUICKREF.md  lucius_sentinel.py  pyproject.toml  robinhood_quickstart.py  script.py  test_verify_rce.py  testing_scripts.py  vulnerability_repository.py
bounty_workspace/: report_nnip.html  report_nnip.json  report_test.html  report_test.json
core/: client.py
exploits/: VERIFY_NNIP_RCE_GUIDE.md  fund_idor.py  nn_ssrf.py  verify_nnip_rce.py
operations/: __init__.py  cli.py  models.py
parsers/: __init__.py  javascript_parser.py  python_parser.py
recon/: GS_RECON_DELIVERY.md  GS_RECON_DOCUMENTATION.md  GS_RECON_QUICKSTART.md  GS_RED_LINES_CHECKLIST.md  README_GS_RECON.md  crl_intel.py  gs_recon.py
reports/: __init__.py  html_report.py  html_reporter.py  json_report.py  json_reporter.py  text_report.py  text_reporter.py
scripts/: setup_branches.sh
sentinel/: api_tester.py  asset_scope_manager.py  bounty_pipeline.py  cli.py  config.py  container_scanner.py  cvss_scorer.py  evidence_collector.py  evidence_manager.py  exploit_predictor.py  iac_scanner.py  lucius.code-workspace  nvd_client.py  parsers.py  recon_engine.py  remediation_engine.py  report_generator.py  sast_analyzer.py  sbom.py  scanner.py  secrets_scanner.py  subdomain_enumerator.py  tech_stack_fingerprinter.py  threat_intelligence.py  utils.py  web_scanner.py
shared/: __init__.py  credentials.py  logging.py
talon/: app.py  middleware.py  models.py  schemas.py
tests/: conftest.py  (+1 more)
(+54 files in other folders)
